[gd_scene load_steps=29 format=3 uid="uid://ccbd33ftirph3"]

[ext_resource type="Script" path="res://player.gd" id="1_vr4bb"]
[ext_resource type="Resource" uid="uid://cw4ywtxw2p0xy" path="res://regular_weapon.tres" id="2_ea02y"]
[ext_resource type="Texture2D" uid="uid://b82u5co6k4vp7" path="res://Art/Main_Characters/Char_Boy.png" id="3_cc8dc"]
[ext_resource type="Texture2D" uid="uid://cqixe4hvditks" path="res://Art/GUI/Numbers.png" id="4_frpbr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ex0wp"]
size = Vector2(14, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv1hb"]
atlas = ExtResource("3_cc8dc")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aivy4"]
atlas = ExtResource("3_cc8dc")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6a82"]
atlas = ExtResource("3_cc8dc")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kne58"]
atlas = ExtResource("3_cc8dc")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ea4k"]
atlas = ExtResource("3_cc8dc")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vkoun"]
atlas = ExtResource("3_cc8dc")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_32ds4"]
atlas = ExtResource("3_cc8dc")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwrgo"]
atlas = ExtResource("3_cc8dc")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxcbt"]
atlas = ExtResource("3_cc8dc")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kj06"]
atlas = ExtResource("3_cc8dc")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwmco"]
atlas = ExtResource("3_cc8dc")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ywuo"]
atlas = ExtResource("3_cc8dc")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8g62p"]
atlas = ExtResource("3_cc8dc")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0hw4"]
atlas = ExtResource("3_cc8dc")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvebm"]
atlas = ExtResource("3_cc8dc")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_27ps0"]
atlas = ExtResource("3_cc8dc")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ntnn"]
atlas = ExtResource("3_cc8dc")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc1ap"]
atlas = ExtResource("3_cc8dc")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp40m"]
atlas = ExtResource("3_cc8dc")
region = Rect2(336, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_rl721"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv1hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aivy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6a82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kne58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ea4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkoun")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_32ds4")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwrgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxcbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kj06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwmco")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ywuo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8g62p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0hw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvebm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27ps0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ntnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc1ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp40m")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="Theme" id="Theme_3nnjd"]
ProgressBar/colors/color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_obdbp"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x31u7"]
bg_color = Color(1, 1, 1, 1)

[node name="player" type="CharacterBody2D" groups=["bullet"]]
z_index = 2
script = ExtResource("1_vr4bb")
weapon = ExtResource("2_ea02y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["bullet"]]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_ex0wp")

[node name="FIreRateTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="FireAfterJump" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_rl721")
animation = &"walk"

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="AmmunitionText" type="Sprite2D" parent="."]
position = Vector2(-11, -22)
texture = ExtResource("4_frpbr")
hframes = 20
vframes = 10

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -12.0
offset_top = -30.0
offset_right = 12.0
offset_bottom = -27.0
theme = SubResource("Theme_3nnjd")
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_styles/background = SubResource("StyleBoxFlat_obdbp")
theme_override_styles/fill = SubResource("StyleBoxFlat_x31u7")
value = 50.0
show_percentage = false

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
